# DriveMM

./: .gitignore  README.md  pyproject.toml
llava/: conversation.py
llava/model/: builder.py
scripts/inference_demo/: demo_image.py  demo_video.py
